Fix button align on wizards

--- a/src/components/Button.scss
+++ b/src/components/Button.scss
@@ -49,6 +49,10 @@ button {
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
+    
+    &.brRight {
+        justify-content: flex-end;
+    }
 
     &>* {
         margin-left: 0;
